testdata/golden/hir_borrow/invalid/shared_borrow_blocks_mutation.sg
fn t() {
    let mut x: int = 1;
    let r: &int = &x;
    x = 2;
}

